tests/toy/neg/001672_mutation.toylang
program a = { while a var sleep; } .
